--- a/package.json
+++ b/package.json
@@ -12,12 +12,8 @@
   },
   "dependencies": {
     "@thirdweb-dev/chains": "^0.1.27",
-    "@thirdweb-dev/react": "^3.14.8",
     "@thirdweb-dev/sdk": "^3.10.28",
-    "ethers": "^5",
-    "next": "^13",
-    "react": "^18.2",
-    "react-dom": "^18.2"
+    "ethers": "^5"
   },
   "devDependencies": {
     "@types/node": "^18.11.11",
